@@ -1,4 +1,8 @@
 master
+- Mayhem
+  Fix thread updater
+- seaweed
+  Fix options button
 
 0.6.1beta
 - Mayhem
